--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
 nav{
     background-color: darkblue;
     padding: 10px;
@@ -6,4 +16,55 @@ nav a {
     color: white;
     display: block;
     padding: 20px;
+}
+
+
+
+main img {
+    width: 130px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
+}
+
+aside{
+    width: 20em;
+    text-align: center;
+    position: relative;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+aside h2{
+    position: above;
+    top: 100px;
+    left: 150%;
+}
+
+footer {
+    margin-top: 1em;
+    border-top: 1px solid #000;
+    text-align: center;
+}
+
+
+
+
+/*class selectors*/
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
+}
+
+.indent{
+    padding-left: 2rem;
 }
