--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 1rem;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +13,14 @@
 body{
     font-size: 16px;
     font-family: Roboto, Arial, sans-serif;
+}
+p {
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    color: darkblue; 
 }
 nav{
     background-color: darkblue;
@@ -32,19 +46,19 @@ main img {
 
 aside{
     width: 20em;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
     text-align: center;
     position: relative;
 }
 
-aside img{
-    width: 200px;
-    height: auto;
-}
-
 aside h2{
-    position: above;
-    top: 100px;
-    left: 150%;
+    margin: 0.5rem 0 0.75rem;
+    font-size: 1.25rem;
+    position: static;
 }
 
 footer {
