--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,18 @@ main img {
     margin: 0 0 1rem 1rem;
 }
 
+img.profile {
+    width: 150px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
+}
+
+
+
 aside{
     width: 20em;
     margin: 1rem;
