--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -84,7 +84,7 @@ nav ul li a:hover {
 }
 
 .hero img {
-  display: right;
+  display: block;
   width: 100%;
   max-height: 400px;
   object-fit: cover;
