--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -329,7 +329,7 @@ footer {
   display: flex;
   justify-content: space-between; /* text left, icons right */
   align-items: center;
-  background-color: #f0f0f0
+  background-color: #f0f0f0;
   color: white;
   padding: 1rem 2rem;
   margin-top: 2rem;
